--- a/config.json
+++ b/config.json
@@ -1,3 +1,1 @@
-{
-	"website": "http://axemclion.github.io/perfslides"
-}
+{"website":"http://copilotgps.com/uk/","creator":"http://perfmonkey.com","rand":0.4973013517446816,"created_at":"2014-07-09T14:04:51.328Z"}
